@@ -196,6 +196,7 @@ enum CodecID {
     CODEC_ID_V210X,
     CODEC_ID_TMV,
     CODEC_ID_V210,
+    CODEC_ID_DPX,
 
     /* various PCM "codecs" */
     CODEC_ID_PCM_S16LE= 0x10000,
